fix issue #188